--- a/public/about/index.html
+++ b/public/about/index.html
@@ -86,7 +86,7 @@ With a strong foundation in chemistry, I hold a Bachelor&rsquo;s degree from Uni
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="/contact/" title="Contact me page">
+            <a class="hover-white no-underline white-90" href="/contacts/" title="Contact me page">
               Contact me
             </a>
           </li>
