--- a/public/oracle_cloud_free_tier/index.html
+++ b/public/oracle_cloud_free_tier/index.html
@@ -184,7 +184,7 @@
 <li><a href="https://www.youtube.com/watch?v=bFZurhL14LA">Fabricio Veronez: Nginx reverse proxy and how it works (PT-BR)</a></li>
 <li><a href="https://www.youtube.com/watch?v=SELkrrexIkQ&t=4s">Sauber Lab: How to get SSL certificates with NPM (PT-BR)</a></li>
 <li><a href="https://dev.to/kylejschwartz/install-docker-compose-on-oracle-linux-8-1kb0">Dev.to: Install Docker and Docker Compose on Oracle Linux 8</a></li>
-<li><a href="https://nginxproxymanager.com/setup/#using-mysql-mariadb-database">Nginx Proxy Manager: default configurations with Docker Compsoe</a></li>
+<li><a href="https://nginxproxymanager.com/setup/#using-mysql-mariadb-database">Nginx Proxy Manager: default configurations with Docker Compose</a></li>
 <li><a href="https://tailscale.com/learn/ssh-into-docker-container">Tailscale SSH into containers</a></li>
 <li><a href="https://tailscale.com/kb/1117/install-oracle-linux-8">Tailscale on Oracle Linux 8</a></li>
 <li><a href="https://tailscale.com/kb/1019/subnets">Tailscale subnet routers</a></li>
