fix: single.html

--- a/public/macbook-pro-10years/index.html
+++ b/public/macbook-pro-10years/index.html
@@ -271,7 +271,20 @@
    </li>
   
 </ul>
-<div class="mt6 instapaper_ignoref">
+<div class="mt4">
+      <form action="https://formspree.io/f/xgeglgop" method="POST" class="w-100">
+        <label class="f6 b db mb1 mt3 sans-serif mid-gray">
+          Your email:
+          <input type="email" name="email" class="w-100 f5 pv3 ph3 bg-light-gray bn">
+        </label>
+        <label class="f6 b db mb1 mt3 sans-serif mid-gray">
+          Your message:
+          <textarea rows="10" cols="50" name="message" class="w-100 f5 pv3 ph3 bg-light-gray bn"></textarea>
+        </label>
+        <button type="submit" class="f6 link dim br2 ph3 pv2 mb2 dib white bg-mid-gray bn">Send</button>
+      </form>
+    </div>
+    <div class="mt6 instapaper_ignoref">
       
       
     </div>
