--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
 <meta itemprop="description" content="Code, Chemistry, and Creativity: A Journey of Exploration"><meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Lucas Fernandes Aguiar"/>
 <meta name="twitter:description" content="Code, Chemistry, and Creativity: A Journey of Exploration"/>
 
-	
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<script type="text/javascript" src="/js/social-buttons.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
