--- a/public/about/index.html
+++ b/public/about/index.html
@@ -50,6 +50,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 <script type="text/javascript" src="/js/social-buttons.js"></script>
+<script type="text/javascript" src="/js/repo-version.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -248,11 +249,16 @@ de Brasília (UnB) as a patent prosecutor and as a PhD student at the Ceramic Ma
 
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/">
       &copy; Lucas Fernandes Aguiar 2023 - 2025. All rights reserved.
     </a>
-    <div>
+    <div class="flex items-center">
+      <span class="f6 dib white-70">
+    Version: <span id="repo-version">...</span>
+    <span class="f7 o-70">(auto-updated)</span>
+</span>
+      <div class="ml3">
 <div class="ananke-socials">
   
     
@@ -294,6 +300,7 @@ de Brasília (UnB) as a patent prosecutor and as a PhD student at the Ceramic Ma
   
 </div>
 </div>
+    </div>
   </div>
 </footer>
   </body>
