--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@ Your email: Your message: Send
     <div class="flex items-center">
       <span class="f6 dib white-70">
     Version: <span id="repo-version">...</span>
-    <span class="f7 o-70">(auto-updated)</span>
+    <span class="f7 o-70"></span>
 </span>
       <div class="ml3">
 <div class="ananke-socials">
