--- a/public/about/index.html
+++ b/public/about/index.html
@@ -256,7 +256,7 @@ de Brasília (UnB) as a patent prosecutor and as a PhD student at the Ceramic Ma
     <div class="flex items-center">
       <span class="f6 dib white-70">
     Version: <span id="repo-version">...</span>
-    <span class="f7 o-70">(auto-updated)</span>
+    <span class="f7 o-70"></span>
 </span>
       <div class="ml3">
 <div class="ananke-socials">
