--- a/public/hugo-content-file-structure/index.html
+++ b/public/hugo-content-file-structure/index.html
@@ -52,7 +52,9 @@
 <meta name="twitter:description" content="I have been using the ananke theme since the inception of this blog. But recently I started to have all sorts of problems because of my lack of understading of how the contents folder is linked to the layouts folder and to the themes/ananke folder.
 /contents So in the ananke theme you have the choice to have more than one language for your website. In my case I only need to use the english folder, which is in contents/en/ folder."/>
 
-	
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<script type="text/javascript" src="/js/social-buttons.js"></script>
+<script type="text/javascript" src="/js/repo-version.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -324,11 +326,16 @@
 
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/">
       &copy; Lucas Fernandes Aguiar 2023 - 2025. All rights reserved.
     </a>
-    <div>
+    <div class="flex items-center">
+      <span class="f6 dib white-70">
+    Version: <span id="repo-version">...</span>
+    <span class="f7 o-70"></span>
+</span>
+      <div class="ml3">
 <div class="ananke-socials">
   
     
@@ -370,6 +377,7 @@
   
 </div>
 </div>
+    </div>
   </div>
 </footer>
   </body>
