--- a/public/life-update-november-2023/index.html
+++ b/public/life-update-november-2023/index.html
@@ -48,7 +48,9 @@
 <meta itemprop="keywords" content="parenthood,life," /><meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Life update - November 2023"/>
 <meta name="twitter:description" content="Life as a father is a lot different than what I anticipated. It is hard to recommend as no one will have the same experience as you, but my experience until this moment has been really worth it. Hard but fulfilling in a way that nothing else can compare."/>
 
-	
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<script type="text/javascript" src="/js/social-buttons.js"></script>
+<script type="text/javascript" src="/js/repo-version.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -246,11 +248,16 @@
 
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/">
       &copy; Lucas Fernandes Aguiar 2023 - 2025. All rights reserved.
     </a>
-    <div>
+    <div class="flex items-center">
+      <span class="f6 dib white-70">
+    Version: <span id="repo-version">...</span>
+    <span class="f7 o-70"></span>
+</span>
+      <div class="ml3">
 <div class="ananke-socials">
   
     
@@ -292,6 +299,7 @@
   
 </div>
 </div>
+    </div>
   </div>
 </footer>
   </body>
