--- a/public/oracle_cloud_free_tier/index.html
+++ b/public/oracle_cloud_free_tier/index.html
@@ -48,7 +48,9 @@
 <meta itemprop="keywords" content="linux,oracle,cloud,web,vps,nginx,tailscale,docker," /><meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Using Oracle Cloud Free tier"/>
 <meta name="twitter:description" content="The problem This week I have been searching for solutions to use domains with my applications running in containers in my MacBook Pro server. Yes, I have converted my MacBook Pro into a server, at least for now. The first solution was to use a Pi-Hole as a local DNS and it works fine, but the problem is that I have to specify ports to get into the applications and it gets annonying."/>
 
-	
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+<script type="text/javascript" src="/js/social-buttons.js"></script>
+<script type="text/javascript" src="/js/repo-version.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
@@ -365,11 +367,16 @@
 
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
-  <div class="flex justify-between">
+  <div class="flex justify-between items-center">
     <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://localhost:1313/">
       &copy; Lucas Fernandes Aguiar 2023 - 2025. All rights reserved.
     </a>
-    <div>
+    <div class="flex items-center">
+      <span class="f6 dib white-70">
+    Version: <span id="repo-version">...</span>
+    <span class="f7 o-70"></span>
+</span>
+      <div class="ml3">
 <div class="ananke-socials">
   
     
@@ -411,6 +418,7 @@
   
 </div>
 </div>
+    </div>
   </div>
 </footer>
   </body>
