fix: replaced pictures

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -62,7 +62,7 @@
     
 
   
-  <header class="cover bg-top" style="background-image: url('http://localhost:1313/images/jigar-panchal-ME1_AXA5lAM-unsplash.jpg');">
+  <header class="cover bg-top" style="background-image: url('https://lucasaguiarxyzstorage.blob.core.windows.net/images/jigar-panchal-ME1_AXA5lAM-unsplash.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -233,12 +233,12 @@ de Brasília (UnB) as a patent prosecutor and as a PhD student at the Ceramic Ma
     <aside class="w-25-l w-100 pl3-l order-3">
         <div class="profile-card sticky top-2 bg-white pa3 br2 shadow-4">
             <div class="circle-mask mb3">
-                <img src="/images/Lucas Perfil 2022.jpg" alt="Lucas Aguiar" class="w-100">
+                <img src="https://lucasaguiarxyzstorage.blob.core.windows.net/images/lucas-perfil-2022.jpg"
+                    alt="Lucas Aguiar" class="w-100">
             </div>
             <div class="social-links flex flex-column">
-                <a href="https://github.com/lucasaguiar" class="link black hover-blue dib mv2"
-                    target="_blank">GitHub</a>
-                <a href="https://linkedin.com/in/lucasaguiar" class="link black hover-blue dib mv2"
+                <a href="https://github.com/isfttr" class="link black hover-blue dib mv2" target="_blank">GitHub</a>
+                <a href="https://linkedin.com/in/lucas-fernandes-aguiar" class="link black hover-blue dib mv2"
                     target="_blank">LinkedIn</a>
                 <a href="https://buymeacoffee.com/lucasaguiar" class="link black hover-blue dib mv2" target="_blank">Buy
                     Me a Coffee</a>
